Labs/aula_dada/lab3/tarefa5/form.atg

import java.io.*;
import java.util.ArrayList;

class HTMLSource
{
    private String source;
    private int qid;

    public HTMLSource() {
        qid = 0;
        source = "<html>\n<head><title>Formulario</title></head>\n<body>\n<form>";
    };

    public void addText(String str) {
        source += str + "<br>\n";
        source += "<textarea name='Q" + qid 
               + "' cols='50' rows='3'></textarea><br>\n<br>";
        qid ++;
    }

    public void addRadio(String str, ArrayList<String> opcoes) {
        source += str + "<br>\n";
        for (String opcao: opcoes) {
            source += "<input type='radio' name='Q" + qid 
                + "' value='" + opcao + "'>" + opcao + "<br>\n";
        }
        source += "<br>\n";
        qid ++;
    }

    public void addCheckBox(String str, ArrayList<String> opcoes) {
        source += str + "<br>\n";
        for (String opcao: opcoes) {
            source += "<input type='checkbox' name='Q" + qid 
                + "' value='" + opcao + "'>" + opcao + "<br>\n";
        }
        source += "<br>\n";
        qid ++;
    }

    public String finish() {
        source += "</form>\n</body>\n</html>";
        return source;
    }
}

COMPILER Form

HTMLSource html;

CHARACTERS
    tudoMenosAspas = ANY - '"'.

TOKENS
    string = "\"" { tudoMenosAspas } "\"".

COMMENTS FROM '#' TO '\n'

IGNORE '\n' + '\r' + '\t'

PRODUCTIONS
    Form                (. html = new HTMLSource(); .)
    = Questao 
      { Questao 
      }                 (. System.out.println(html.finish()); .)
    .

    Questao = Texto | EscolhaUma | EscolhaVarias.

    Texto 
    = "TEXTO" string    (. html.addText(t.val.substring(1, t.val.length()-1)); .)
    .
    
    EscolhaUma          (. String str = ""; 
                           ArrayList<String> opcoes; .)
    = "ESCOLHAUMA" 
      string            (. str = t.val.substring(1, t.val.length()-1); .)
      ListaOpcoes<out opcoes>       
                        (. html.addRadio(str, opcoes); .)
    .

    EscolhaVarias       (. String str = ""; ArrayList<String> opcoes; .)
    = "ESCOLHAVARIAS" string 
                        (. str = t.val.substring(1, t.val.length()-1); .)
      ListaOpcoes<out opcoes>
                        (. html.addCheckBox(str, opcoes); .) 
    .
    
    ListaOpcoes<out ArrayList<String> opcoes>   
                        (. opcoes = new ArrayList<String>(); .)
    = "(" string        (. opcoes.add(t.val.substring(1, t.val.length()-1)); .)
      { "," string      (. opcoes.add(t.val.substring(1, t.val.length()-1)); .)
      } ")"
    .

END Form.
